--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projektkurs2",
+  "name": "pixiepower",
   "version": "%VERSION%",
   "description": "An awesome Rune-based application.",
   "main": "bin/bootstrap.js",
